tests/mvar/reject/higher_order_call.nos
# expect: error
# Direct call to mvar-accessing function from caller that also accesses mvar

mvar counter: Int = 0

increment() = {
    counter = counter + 1
    counter
}

double_increment() = {
    increment()
    increment()
}

use_counter() = {
    # UNSAFE: reads counter and calls double_increment which calls increment
    double_increment()
    counter
}

main() = {
    use_counter()
}
